--- a/src/Components/Gallery/gallery.css
+++ b/src/Components/Gallery/gallery.css
@@ -1,40 +1,33 @@
-/* HERO */
-.hero-section {
+/* ================= GALLERY HERO ================= */
+
+.gallery-hero {
   position: relative;
-  width: 100%;
-  height: 60vh;            /* FULL SCREEN HEIGHT */
+  height: 59vh;
+  background: linear-gradient(
+      #f7f2e6f7,
+      rgba(214, 156, 64, 0.55)
+    ),
+    url("../../assets/agro/gallery.png");
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   overflow: hidden;
-}
-
-/* IMAGE FULL SCREEN */
-.hero-img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;        /* IMPORTANT */
-  position: absolute;
-  top: 0;
-  left: 0;
-}
-.breadcrumb-text {
-  font-size: 14px;
-  letter-spacing: 1px;
-  opacity: 0.9;
-}
-
-.hero-title {
-  font-size: 64px;
-  font-weight: 700;
+animation: slideDown 1.2s ease forwards;
 }
 
 /* GALLERY */
 .gallery-section {
   padding: 70px 0;
+  
 }
 
 .gallery-title {
   font-size: 32px;
   font-weight: 500;
   color: #a0a59f;
+   
 }
 
 .gallery-subtitle {
